fix global svg `vertical-align` and `margin-right`

--- a/packages/app/src/theme/index.less
+++ b/packages/app/src/theme/index.less
@@ -49,6 +49,11 @@ html {
 	&.theme-dark {
 		@import "./variations/dark.less";
 	}
+
+	svg {
+		margin-right: 10px;
+		vertical-align: -0.125em;
+	}
 }
 
 body {
